Download ChurchBulletin.Database, and run the migrations in the TDD project.

--- a/src/Database/Database.csproj
+++ b/src/Database/Database.csproj
@@ -5,16 +5,21 @@
     <TargetFramework>net9.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
-    <AssemblyName>ClearMeasure.Bootcamp.$(MSBuildProjectName)</AssemblyName>
+    <AssemblyName>ChurchBulletin.Database </AssemblyName>
 	<RootNamespace>ClearMeasure.Bootcamp.$(MSBuildProjectName.Replace(" ", "_"))</RootNamespace>
     <Configurations>Debug;Release;exclude-maui.slnf</Configurations>
   </PropertyGroup>
-
+    <PropertyGroup>
+        <PublishSingleFile>true</PublishSingleFile>
+        <RuntimeIdentifier>win-x64</RuntimeIdentifier>
+    </PropertyGroup>
+    <PropertyGroup Condition="'$(RuntimeIdentifier)' == ''">
+        <PublishSingleFile>true</PublishSingleFile>
+        <RuntimeIdentifier>linux-x64</RuntimeIdentifier>
+    </PropertyGroup>
   <ItemGroup>
-    <PackageReference Include="AliaSQL" Version="2.0.0" />
     <PackageReference Include="DbUp" Version="5.0.41" />
     <PackageReference Include="dbup-sqlserver" Version="6.0.16" />
-
   </ItemGroup>
 
 </Project>
