--- a/src/Database/Database.csproj
+++ b/src/Database/Database.csproj
@@ -5,12 +5,15 @@
     <TargetFramework>net9.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
+    <AssemblyName>ClearMeasure.Bootcamp.$(MSBuildProjectName)</AssemblyName>
 	<RootNamespace>ClearMeasure.Bootcamp.$(MSBuildProjectName.Replace(" ", "_"))</RootNamespace>
     <Configurations>Debug;Release;exclude-maui.slnf</Configurations>
   </PropertyGroup>
+
   <ItemGroup>
     <PackageReference Include="DbUp" Version="5.0.41" />
     <PackageReference Include="dbup-sqlserver" Version="6.0.16" />
+
   </ItemGroup>
 
 </Project>
