--- a/.github/workflows/integration-build.yml
+++ b/.github/workflows/integration-build.yml
@@ -15,6 +15,9 @@ jobs:
   build:
     name: Build and Test (Windows)
     runs-on: windows-latest
+    permissions:
+      contents: read
+      packages: write
     
     steps:
       # Checkout code
@@ -47,6 +50,8 @@ jobs:
       # Run PrivateBuild script
       - name: Run Build Script
         shell: pwsh
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
           . ./build.ps1
           PrivateBuild
@@ -103,6 +108,7 @@ jobs:
     runs-on: ubuntu-latest
     permissions:
       contents: read
+      packages: write
     
     steps:
       # Checkout code
@@ -130,6 +136,8 @@ jobs:
 
       # Run CIBuild script
       - name: Run CI Build Script
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
           pwsh -Command ". ./build.ps1; CIBuild"
 
