Use the runsettings in the AzDO pipeline.

--- a/src/pure-azdo-pipeline.yml
+++ b/src/pure-azdo-pipeline.yml
@@ -203,7 +203,8 @@ stages:
                       **\*AcceptanceTests.dll
                       !**\*TestAdapter.dll
                       !**\obj\**
-                      searchFolder: '$(System.DefaultWorkingDirectory)/tests'
+                    searchFolder: '$(System.DefaultWorkingDirectory)/tests'
+                    runSettingsFile: '$(System.DefaultWorkingDirectory)/tests/AcceptanceTests.runsettings'
                     uiTests: true
                     codeCoverageEnabled: true
                     testRunTitle: "Acceptance Tests"
