--- a/.github/workflows/integration-build.yml
+++ b/.github/workflows/integration-build.yml
@@ -64,6 +64,20 @@ jobs:
           . ./build.ps1
           PrivateBuild
 
+      # Run Acceptance Tests - temporary for now to make sure AcceptanceTests.ps1 works on GHA Windows runners
+      - name: Run Acceptance Tests
+        shell: pwsh
+        env:
+          BuildConfiguration: ${{ env.BUILD_CONFIGURATION }}
+          BUILD_BUILDNUMBER: ${{ env.VERSION }}
+          # OCTOPUS_URL: ${{ secrets.OCTOPUS_SERVER_URL }}
+          # OCTOPUS_API_KEY: ${{ secrets.OCTOPUS_API_KEY }}
+          # OCTOPUS_SPACE: ${{ secrets.OCTOPUS_SPACE }}
+          # OCTOPUS_PROJECT: ${{ secrets.OCTOPUS_PROJECT }}
+        run: |
+          .\AcceptanceTests.ps1
+
+
       # Publish test results
       - name: Test Reporter
         uses: dorny/test-reporter@v2.1.1
@@ -149,6 +163,20 @@ jobs:
         run: |
           pwsh -Command ". ./build.ps1; CIBuild"
 
+      # Run Acceptance Tests - temporary for now to make sure AcceptanceTests.ps1 works on GHA Linux runners
+      - name: Run Acceptance Tests
+        shell: pwsh
+        env:
+          BuildConfiguration: ${{ env.BUILD_CONFIGURATION }}
+          BUILD_BUILDNUMBER: ${{ env.VERSION }}
+          # OCTOPUS_URL: ${{ secrets.OCTOPUS_SERVER_URL }}
+          # OCTOPUS_API_KEY: ${{ secrets.OCTOPUS_API_KEY }}
+          # OCTOPUS_SPACE: ${{ secrets.OCTOPUS_SPACE }}
+          # OCTOPUS_PROJECT: ${{ secrets.OCTOPUS_PROJECT }}
+        run: |
+          .\AcceptanceTests.ps1
+
+
       # Upload packages as artifacts
       - name: Upload NuGet Packages
         uses: actions/upload-artifact@v4
@@ -193,4 +221,40 @@ jobs:
           name: code-coverage-linux
           path: '**/build/test/**/In/**/coverage.cobertura.xml'
           retention-days: 30
+
+  push-to-octopus:
+    name: Push Packages to Octopus Deploy
+    runs-on: ubuntu-latest
+    needs: [build, build-linux]
+    if: github.event_name == 'workflow_dispatch'
+    permissions:
+      contents: read
+      packages: read
+    
+    steps:
+      # Checkout code
+      - name: Checkout code
+        uses: actions/checkout@v4
+
+      # Download NuGet packages from build-linux job
+      - name: Download NuGet Packages
+        uses: actions/download-artifact@v4
+        with:
+          name: nuget-packages
+          path: ./packages
+
+      # Install Octopus CLI
+      - name: Install Octopus CLI
+        run: |
+          dotnet tool install --global Octopus.DotNet.Cli
+
+      # Push packages to Octopus Deploy
+      - name: Push to Octopus Deploy
+        env:
+          OCTOPUS_URL: ${{ secrets.OCTOPUS_SERVER_URL }}
+          OCTOPUS_API_KEY: ${{ secrets.OCTOPUS_API_KEY }}
+        run: |
+          dotnet octo push --package ./packages/*.nupkg --server $OCTOPUS_URL --apiKey $OCTOPUS_API_KEY
+
+          
           
