--- a/.github/workflows/integration-build.yml
+++ b/.github/workflows/integration-build.yml
@@ -64,6 +64,17 @@ jobs:
           . ./build.ps1
           PrivateBuild
 
+      # Install Playwright Browsers
+      - name: Install Playwright Browsers
+        shell: pwsh
+        run: |
+          $playwrightScript = Join-Path "src" "AcceptanceTests" "bin" "Release" "net9.0" "playwright.ps1"
+          if (Test-Path $playwrightScript) {
+            pwsh $playwrightScript install --with-deps
+          } else {
+            Write-Host "Playwright script not found at $playwrightScript"
+          }
+
       # Run Acceptance Tests - temporary for now to make sure AcceptanceTests.ps1 works on GHA Windows runners
       - name: Run Acceptance Tests
         shell: pwsh
@@ -163,6 +174,17 @@ jobs:
         run: |
           pwsh -Command ". ./build.ps1; CIBuild"
 
+      # Install Playwright Browsers
+      - name: Install Playwright Browsers
+        shell: pwsh
+        run: |
+          $playwrightScript = Join-Path "src" "AcceptanceTests" "bin" "Release" "net9.0" "playwright.ps1"
+          if (Test-Path $playwrightScript) {
+            pwsh $playwrightScript install --with-deps
+          } else {
+            Write-Host "Playwright script not found at $playwrightScript"
+          }
+
       # Run Acceptance Tests - temporary for now to make sure AcceptanceTests.ps1 works on GHA Linux runners
       - name: Run Acceptance Tests
         shell: pwsh
@@ -221,6 +243,8 @@ jobs:
           name: code-coverage-linux
           path: '**/build/test/**/In/**/coverage.cobertura.xml'
           retention-days: 30
+
+
 
   push-to-octopus:
     name: Push Packages to Octopus Deploy
