--- a/.github/workflows/integration-build.yml
+++ b/.github/workflows/integration-build.yml
@@ -39,6 +39,12 @@ jobs:
         with:
           dotnet-version: '9.0.302'
 
+      # Install .NET SDK 6.0 (required by Octopus CLI)
+      - name: Setup .NET SDK 6.0
+        uses: actions/setup-dotnet@v4
+        with:
+          dotnet-version: '6.0.x'
+
       # Set version environment variable
       - name: Set Version
         shell: pwsh
@@ -74,6 +80,7 @@ jobs:
           } else {
             Write-Host "Playwright script not found at $playwrightScript"
           }
+
 
       # Run Acceptance Tests - temporary for now to make sure AcceptanceTests.ps1 works on GHA Windows runners
       - name: Run Acceptance Tests
