--- a/.github/workflows/integration-build.yml
+++ b/.github/workflows/integration-build.yml
@@ -39,12 +39,6 @@ jobs:
         with:
           dotnet-version: '9.0.302'
 
-      # Install .NET SDK 6.0 (required by Octopus CLI)
-      - name: Setup .NET SDK 6.0
-        uses: actions/setup-dotnet@v4
-        with:
-          dotnet-version: '6.0.x'
-
       # Set version environment variable
       - name: Set Version
         shell: pwsh
@@ -68,41 +62,7 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
           . ./build.ps1
-          PrivateBuild
-
-      # Install Playwright Browsers
-      - name: Install Playwright Browsers
-        shell: pwsh
-        run: |
-          $playwrightScript = Join-Path "src" "AcceptanceTests" "bin" "Release" "net9.0" "playwright.ps1"
-          if (Test-Path $playwrightScript) {
-            pwsh $playwrightScript install --with-deps
-          } else {
-            Write-Host "Playwright script not found at $playwrightScript"
-          }
-
-
-      # Run Acceptance Tests - temporary for now to make sure AcceptanceTests.ps1 works on GHA Windows runners
-      - name: Run Acceptance Tests
-        shell: pwsh
-        env:
-          BuildConfiguration: ${{ env.BUILD_CONFIGURATION }}
-          BUILD_BUILDNUMBER: ${{ env.VERSION }}
-          # OCTOPUS_URL: ${{ secrets.OCTOPUS_SERVER_URL }}
-          # OCTOPUS_API_KEY: ${{ secrets.OCTOPUS_API_KEY }}
-          # OCTOPUS_SPACE: ${{ secrets.OCTOPUS_SPACE }}
-          # OCTOPUS_PROJECT: ${{ secrets.OCTOPUS_PROJECT }}
-        run: |
-          .\AcceptanceTests.ps1
-
-      # Upload packages as artifacts
-      - name: Upload NuGet Packages
-        uses: actions/upload-artifact@v4
-        if: success()
-        with:
-          name: nuget-packages-windows
-          path: build/*.nupkg
-          retention-days: 90
+          CIBuild
 
       # Publish test results
       - name: Test Reporter
@@ -169,12 +129,6 @@ jobs:
         with:
           dotnet-version: '9.0.302'
 
-      # Install .NET SDK 6.0 (required by Octopus CLI)
-      - name: Setup .NET SDK 6.0
-        uses: actions/setup-dotnet@v4
-        with:
-          dotnet-version: '6.0.x'
-
       # Set version environment variable
       - name: Set Version
         run: |
@@ -190,41 +144,8 @@ jobs:
           GITHUB_REPOSITORY: ${{ github.repository }}
           BUILD_BUILDNUMBER: ${{ env.VERSION }}
         run: |
-          pwsh -Command ". ./build.ps1; CIBuild"
-
-      # Install Playwright Browsers
-      - name: Install Playwright Browsers
-        shell: pwsh
-        run: |
-          $playwrightScript = Join-Path "src" "AcceptanceTests" "bin" "Release" "net9.0" "playwright.ps1"
-          if (Test-Path $playwrightScript) {
-            pwsh $playwrightScript install --with-deps
-          } else {
-            Write-Host "Playwright script not found at $playwrightScript"
-          }
-
-      # Run Acceptance Tests - temporary for now to make sure AcceptanceTests.ps1 works on GHA Linux runners
-      - name: Run Acceptance Tests
-        shell: pwsh
-        env:
-          BuildConfiguration: ${{ env.BUILD_CONFIGURATION }}
-          BUILD_BUILDNUMBER: ${{ env.VERSION }}
-          # OCTOPUS_URL: ${{ secrets.OCTOPUS_SERVER_URL }}
-          # OCTOPUS_API_KEY: ${{ secrets.OCTOPUS_API_KEY }}
-          # OCTOPUS_SPACE: ${{ secrets.OCTOPUS_SPACE }}
-          # OCTOPUS_PROJECT: ${{ secrets.OCTOPUS_PROJECT }}
-        run: |
-          .\AcceptanceTests.ps1
-
-
-      # Upload packages as artifacts
-      - name: Upload NuGet Packages
-        uses: actions/upload-artifact@v4
-        if: success()
-        with:
-          name: nuget-packages-linux
-          path: build/*.nupkg
-          retention-days: 90
+          . ./build.ps1
+          CIBuild
 
       # Publish test results
       - name: Test Reporter
@@ -260,4 +181,85 @@ jobs:
         with:
           name: code-coverage-linux
           path: '**/build/test/**/In/**/coverage.cobertura.xml'
+          retention-days: 30
+
+  acceptance-tests-and-publish:
+    name: Acceptance Tests and Package
+    runs-on: ubuntu-latest
+    needs: [build, build-linux]
+    if: success()
+    permissions:
+      contents: read
+      packages: write
+    
+    steps:
+      # Checkout code
+      - name: Checkout code
+        uses: actions/checkout@v4
+
+      # Install .NET SDK 9.0.302
+      - name: Setup .NET SDK 9.0.302
+        uses: actions/setup-dotnet@v4
+        with:
+          dotnet-version: '9.0.302'
+
+      # Install .NET SDK 6.0 (required by Octopus CLI)
+      - name: Setup .NET SDK 6.0
+        uses: actions/setup-dotnet@v4
+        with:
+          dotnet-version: '6.0.x'
+
+      # Set version environment variable
+      - name: Set Version
+        run: |
+          version="${{ env.MAJOR_VERSION }}.${{ env.MINOR_VERSION }}.${{ github.run_number }}"
+          echo "BUILD_BUILDNUMBER=$version" >> $GITHUB_ENV
+          echo "VERSION=$version" >> $GITHUB_ENV
+          echo "Build version: $version"
+
+      # Install Playwright Browsers
+      - name: Install Playwright Browsers
+        shell: pwsh
+        run: |
+          $playwrightScript = Join-Path "src" "AcceptanceTests" "bin" "Release" "net9.0" "playwright.ps1"
+          if (-not (Test-Path $playwrightScript)) {
+            Write-Error "Playwright script not found at $playwrightScript"
+            exit 1
+          }
+          pwsh $playwrightScript install --with-deps
+
+      # Run Acceptance Tests
+      - name: Run Acceptance Tests
+        shell: pwsh
+        env:
+          BuildConfiguration: Release
+          BUILD_BUILDNUMBER: ${{ env.VERSION }}
+        run: |
+          .\AcceptanceTests.ps1
+
+      # Package Everything
+      - name: Package NuGet Packages
+        shell: pwsh
+        env:
+          BUILD_BUILDNUMBER: ${{ env.VERSION }}
+        run: |
+          . ./build.ps1
+          Package-Everything
+
+      # Upload packages as artifacts
+      - name: Upload NuGet Packages
+        uses: actions/upload-artifact@v4
+        if: success()
+        with:
+          name: nuget-packages-acceptance
+          path: build/*.nupkg
+          retention-days: 90
+
+      # Upload test results
+      - name: Upload Test Results
+        uses: actions/upload-artifact@v4
+        if: always()
+        with:
+          name: test-results-acceptance
+          path: build/test/**/*.trx
           retention-days: 30
