Fix error in GH YAML.

--- a/.github/workflows/integration-build.yml
+++ b/.github/workflows/integration-build.yml
@@ -143,6 +143,7 @@ jobs:
 
        # Run CIBuild script
       - name: Run CI Build Script
+        shell: pwsh
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           GITHUB_REPOSITORY: ${{ github.repository }}
