--- a/src/pure-azdo-pipeline.yml
+++ b/src/pure-azdo-pipeline.yml
@@ -27,42 +27,6 @@ stages:
             inputs:
               packageType: "runtime"
               version: "6.0.0"
-          # Start SQL Server LocalDB
-          - task: PowerShell@2
-            displayName: "Start and Verify SQL Server LocalDB (Windows only)"
-            condition: eq(variables['Agent.OS'], 'Windows_NT')
-            inputs:
-              pwsh: true
-              targetType: "inline"
-              script: |
-                Write-Host "Starting SQL Server LocalDB..."
-                sqllocaldb create MSSQLLocalDB -s
-                sqllocaldb start MSSQLLocalDB
-                sqllocaldb info MSSQLLocalDB
-                
-                Write-Host "Waiting for LocalDB to be ready..."
-                $maxAttempts = 30
-                $attempt = 0
-                $ready = $false
-                
-                while (-not $ready -and $attempt -lt $maxAttempts) {
-                    $attempt++
-                    try {
-                        $conn = New-Object System.Data.SqlClient.SqlConnection("Server=(LocalDb)\MSSQLLocalDB;Integrated Security=true;Connection Timeout=5")
-                        $conn.Open()
-                        $conn.Close()
-                        $ready = $true
-                        Write-Host "LocalDB is ready after $attempt attempts"
-                    }
-                    catch {
-                        Write-Host "Attempt $attempt : $_"
-                        Start-Sleep -Seconds 2
-                    }
-                }
-                
-                if (-not $ready) {
-                    throw "LocalDB failed to start after $maxAttempts attempts"
-                }
           # Set environment variables
           - task: PowerShell@2
             displayName: "Set Version Environment Variable"
@@ -73,7 +37,7 @@ stages:
                 [System.Environment]::SetEnvironmentVariable('Version','$(Build.BuildNumber)')
                 echo "Build Version: $env:Version"
           - task: PowerShell@2
-            displayName: "Run the Powershell build script"
+            displayName: "Run CIBuild"
             inputs:
               pwsh: true
               targetType: filePath
@@ -93,13 +57,20 @@ stages:
             inputs:
               codeCoverageTool: Cobertura
               summaryFileLocation: "$(System.DefaultWorkingDirectory)/**/build/test/**/In/**/coverage.cobertura.xml"
-          # - task: DotNetCoreCLI@2
-          #   displayName: "Push NuGet packages."
-          #   inputs:
-          #     command: "push"
-          #     packagesToPush: "$(System.DefaultWorkingDirectory)/build/*.nupkg"
-          #     nuGetFeedType: "internal"
-          #     publishVstsFeed: "$(AzureFeedName)"
+          - task: PowerShell@2
+            displayName: "Package Nugets"
+            inputs:
+              pwsh: true
+              targetType: filePath
+              filePath: ./build.ps1
+              arguments: ";Package-Everything"          
+          - task: DotNetCoreCLI@2
+            displayName: "Push NuGet packages."
+            inputs:
+              command: "push"
+              packagesToPush: "$(System.DefaultWorkingDirectory)/build/*.nupkg"
+              nuGetFeedType: "internal"
+              publishVstsFeed: "$(AzureFeedName)"
       - job: "DockerBuildandPush"
         pool:
           vmImage: "ubuntu-latest"
@@ -150,11 +121,16 @@ stages:
                     downloadPath: "$(System.DefaultWorkingDirectory)"
                     extract: true
                 - task: PowerShell@2
-                  displayName: "Create database schema"
+                  displayName: "Baseline database schema"
                   inputs:
                     pwsh: true
                     targetType: filePath
                     filePath: ./scripts/UpdateAzurePipelineSql.ps1
+                    arguments: -DatabaseServer "$(DatabaseServer)" -DatabaseName "ChurchBulletin" -DatabaseAction "baseline" -DatabaseUser "tdd" -DatabasePassword "$(DatabasePassword)"                    
+                - task: PowerShell@2
+                  displayName: "Create database schema"
+                  inputs:
+                Path: ./scripts/UpdateAzurePipelineSql.ps1
                     arguments: -DatabaseServer "$(DatabaseServer)" -DatabaseName "ChurchBulletin" -DatabaseAction "$(DatabaseAction)" -DatabaseUser "tdd" -DatabasePassword "$(DatabasePassword)"
 
                 - task: AzureCLI@2
@@ -187,6 +163,20 @@ stages:
                     extract: true
 
                 - task: PowerShell@2
+                  displayName: "Run ChurchBulletin.Database migration"
+                  inputs:
+                    pwsh: true
+                    targetType: "inline"
+                    script: |
+                      $databaseDll = Get-ChildItem -Path "$(System.DefaultWorkingDirectory)/database" -Filter "ClearMeasure.Bootcamp.Database.dll" -Recurse | Select-Object -First 1
+                      if ($databaseDll) {
+                        dotnet $databaseDll.FullName "$(DatabaseAction)" "$(DatabaseServer)" "ChurchBulletin" "$(System.DefaultWorkingDirectory)/database/scripts"
+                      } else {
+                        Write-Error "ClearMeasure.Bootcamp.Database.dll not found in downloaded package"
+                        exit 1
+                      }
+
+                - task: PowerShell@2
                   displayName: "Install Playwright"
                   inputs:
                     pwsh: true
@@ -203,8 +193,7 @@ stages:
                       **\*AcceptanceTests.dll
                       !**\*TestAdapter.dll
                       !**\obj\**
-                    searchFolder: '$(System.DefaultWorkingDirectory)/tests'
-                    runSettingsFile: '$(System.DefaultWorkingDirectory)/tests/AcceptanceTests.runsettings'
+                      searchFolder: '$(System.DefaultWorkingDirectory)/tests'
                     uiTests: true
                     codeCoverageEnabled: true
                     testRunTitle: "Acceptance Tests"
