Woops.  forgot to update the dependecies of the old 'build' job.

--- a/.github/workflows/integration-build.yml
+++ b/.github/workflows/integration-build.yml
@@ -90,7 +90,7 @@ jobs:
   acceptance-tests-and-publish:
     name: Acceptance Tests and Package
     runs-on: ubuntu-latest
-    needs: [build, build-linux]
+    needs: [build-linux]
     if: success()
     permissions:
       contents: read
