Rename some stuff for consistency and adhere to Powershell verbs.  Adding documentation.

--- a/.github/workflows/integration-build.yml
+++ b/.github/workflows/integration-build.yml
@@ -142,12 +142,12 @@ jobs:
           echo "BUILD_BUILDNUMBER=$version" >> $GITHUB_ENV
           echo "Build version: $version"
 
-       # Run CIBuild script
+       # Run Invoke-CIBuild script
       - name: Run CI Build Script
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
-          pwsh -Command ". ./build.ps1; CIBuild"
+          pwsh -Command ". ./build.ps1; Invoke-CIBuild"
 
       # Upload packages as artifacts
       - name: Upload NuGet Packages
