--- a/src/pure-azdo-pipeline.yml
+++ b/src/pure-azdo-pipeline.yml
@@ -78,7 +78,7 @@ stages:
               pwsh: true
               targetType: filePath
               filePath: ./build.ps1
-              arguments: ";CIBuild"
+              arguments: ";Invoke-CIBuild"
           - task: PublishTestResults@2
             displayName: "Publish Test Results ./build/test/*.trx"
             inputs:
