Fix PowerShell command invocation in workflow and build script

--- a/.github/workflows/integration-build.yml
+++ b/.github/workflows/integration-build.yml
@@ -49,7 +49,7 @@ jobs:
           BUILD_BUILDNUMBER: ${{ env.VERSION }}
         run: |
           . ./build.ps1
-          CIBuild
+          Invoke-CIBuild
 
       # Publish test results
       - name: Test Reporter
