--- a/.github/workflows/integration-build.yml
+++ b/.github/workflows/integration-build.yml
@@ -40,7 +40,7 @@ jobs:
           echo "VERSION=$version" >> $GITHUB_ENV
           echo "Build version: $version"
 
-       # Run CIBuild script
+       # Run Invoke-CIBuild script
       - name: Run CI Build Script
         shell: pwsh
         env:
@@ -49,7 +49,7 @@ jobs:
           BUILD_BUILDNUMBER: ${{ env.VERSION }}
         run: |
           . ./build.ps1
-          CIBuild
+          Invoke-CIBuild
 
       # Publish test results
       - name: Test Reporter
