--- a/src/pure-azdo-pipeline.yml
+++ b/src/pure-azdo-pipeline.yml
@@ -18,10 +18,11 @@ stages:
         steps:
           # Dependencies
           - task: UseDotNet@2
-            displayName: "Install SDK 9.0.302"
+            displayName: "Install SDK 10.0.100"
             inputs:
               packageType: "sdk"
-              version: "9.0.302"
+              version: "10.0.100"
+              includePreviewVersions: true
           - task: UseDotNet@2
             displayName: "Install Runtime 6.0.0"
             inputs:
